WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214554
[GTK] WebKitSettings:enable-private-browsing missing G_PARAM_DEPRECATED
https://bugs.webkit.org/show_bug.cgi?id=214554
Summary
[GTK] WebKitSettings:enable-private-browsing missing G_PARAM_DEPRECATED
Michael Catanzaro
Reported
2020-07-20 08:44:31 PDT
WebKitSettings:enable-private-browsing is missing G_PARAM_DEPRECATED
Attachments
Patch
(1.54 KB, patch)
2020-07-20 08:45 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.58 KB, patch)
2020-07-21 06:06 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2020-07-20 08:45:40 PDT
Created
attachment 404717
[details]
Patch
Michael Catanzaro
Comment 2
2020-07-20 08:46:12 PDT
Style checker won't like this, since the existing code doesn't follow WebKit code style, but I figure reindenting it to change one line is probably overkill.
EWS Watchlist
Comment 3
2020-07-20 08:46:41 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 4
2020-07-20 23:58:06 PDT
Comment on
attachment 404717
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=404717&action=review
> Source/WebKit/UIProcess/API/glib/WebKitSettings.cpp:957 > + readWriteConstructParamFlags | G_PARAM_DEPRECATED));
You need a cast here. This doesn't build.
Michael Catanzaro
Comment 5
2020-07-21 06:03:52 PDT
(In reply to Carlos Garcia Campos from
comment #4
)
> You need a cast here. This doesn't build.
That's what I thought, but I tried without just to see, and it built for me, so I didn't use it. Maybe the cast is no longer required with GCC 10. I tested again just now to be certain, and it really builds fine for me without the cast....
Michael Catanzaro
Comment 6
2020-07-21 06:06:57 PDT
Created
attachment 404813
[details]
Patch for landing
EWS
Comment 7
2020-07-21 07:00:56 PDT
Committed
r264653
: <
https://trac.webkit.org/changeset/264653
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404813
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug