[GTK] WebKitSettings:enable-private-browsing missing G_PARAM_DEPRECATED https://bugs.webkit.org/show_bug.cgi?id=214554

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-07-21
Reviewed by Carlos Garcia Campos.

* UIProcess/API/glib/WebKitSettings.cpp:
(webkit_settings_class_init):

Canonical link: https://commits.webkit.org/227398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264653 268f45cc-cd09-0410-ab3c-d52691b4dbfc